<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PPCalc</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbohydrates</string>
    <string name="fat">Fat</string>
    <string name="fibre">Fibre</string>
    <string name="calculate">Calculate</string>
    <string name="init">Init</string>
    <string name="nil">0</string>
    <string name="points">Points</string>

    <plurals name="num_points">
        <item quantity="zero">Zero points.</item>
        <item quantity="one">%d point.</item>
        <item quantity="other">%d points.</item>
    </plurals>

    <string name="unit">Units</string>
    <string name="grams">Grams</string>
    <string name="kilos">Kilograms</string>
    <string name="pounds">Pounds</string>
    <string name="ounces">Ounces</string>
    <string name="kilocalories">Kcal</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="preferredUnit">Select the units.</string>
    <string name="settings">Settings</string>
    <string name="propoints">Propoints</string>
    <string name="flexipoints">Flexipoints</string>
    <string name="main">Main</string>
    <string name="main_summary">Main preferences</string>
    <string name="portion">Portion</string>
    <string name="help">Help</string>
    <string name="helpMessage">Enter the values for 100 %s and enter the portion.</string>
    <string name="pointsplus">PointsPlus</string>
    <string name="title_activity_point_tracker">PointTracker</string>
    <string name="action_settings">Settings</string>
    <string name="purchase">Remove ads</string>
    <string name="comment">Comment</string>
    <string name="ok">OK</string>
    <string name="add_points">Add points</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="deleting">Deleting…</string>
    <string name="calculator">Calculator</string>
    <string name="error_empty_points">Points can not be empty.</string>
    <string name="daily_allowance">Daily allowance</string>
    <string name="daily_allowance_summary">Input your daily points allowance</string>
    <string name="tracker">Point tracker</string>
    <string name="tracker_preferences_summary">PointTracker preferences.</string>
    <string name="date_picker_message">Select the date you want to view:</string>

    <plurals name="points_of">
        <item quantity="zero">%1$d points of %2$d.</item>
        <item quantity="one">%1$d point of %2$d.</item>
        <item quantity="other">%1$d points of %2$d.</item>
    </plurals>

    <string name="history">History</string>
    <string name="select_calculator">Select calculator.</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>

</resources>
