<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical">
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:stretchColumns="1" android:padding="8dp">

    <TableRow android:layout_width="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/protein" android:layout_marginRight="3dip" />
        <EditText
            android:id="@+id/editProtein"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" android:hint="@string/nil" >
            <requestFocus />
        </EditText>
    </TableRow>
    <TableRow android:layout_width="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carbs" android:layout_marginRight="3dp" />
        <EditText
            android:id="@+id/editCarbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" android:hint="@string/nil" />
    </TableRow>
    <TableRow android:layout_width="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fat" android:layout_marginRight="3dp" />
        <EditText
            android:id="@+id/editFat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" android:hint="@string/nil" />
    </TableRow>
    <TableRow android:layout_width="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fibre" android:layout_marginRight="3dp" />
        <EditText
            android:id="@+id/editFibre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" android:hint="@string/nil" />
    </TableRow>
    <TableRow android:layout_width="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/unit" android:layout_marginRight="3dp"/>
        <Spinner
            android:id="@+id/unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </TableRow>

    <TableRow android:layout_width="match_parent">
        <Button android:layout_span="2" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/bCalculate" android:text="@string/calculate" />
    </TableRow>
</TableLayout>
</LinearLayout>