<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical">
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="0dp" android:layout_weight="1" android:stretchColumns="1" android:padding="8dp">

    <TableRow android:layout_width="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/protein" android:layout_marginRight="3dip" />
        <EditText
            android:id="@+id/editProtein"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" android:hint="@string/nil" >
            <requestFocus />
        </EditText>
    </TableRow>
    <TableRow android:layout_width="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carbs" android:layout_marginRight="3dp" />
        <EditText
            android:id="@+id/editCarbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" android:hint="@string/nil" />
    </TableRow>
    <TableRow android:layout_width="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fat" android:layout_marginRight="3dp" />
        <EditText
            android:id="@+id/editFat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" android:hint="@string/nil" />
    </TableRow>
    <TableRow android:layout_width="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fibre" android:layout_marginRight="3dp" />
        <EditText
            android:id="@+id/editFibre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" android:hint="@string/nil" />
    </TableRow>
    <TableRow android:layout_width="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unit" android:layout_marginRight="3dp"/>
        <Spinner
            android:id="@+id/unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </TableRow>

    <TableRow android:layout_width="match_parent">
        <Button android:layout_span="2" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/bCalculate" android:text="@string/calculate" />
    </TableRow>
</TableLayout>
    <com.google.ads.AdView android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adUnitId="ca-app-pub-0190912530193856/6734458653"
        ads:adSize="BANNER"
        ads:loadAdOnCreate="true" />
</LinearLayout>