<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:stretchColumns="1">

            <TableRow android:layout_width="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dip"
                    android:text="@string/fat" />

                <EditText
                    android:id="@+id/editFat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nil"
                    android:inputType="numberDecimal">

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/unitFat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:text="@string/kilocalories" />

                <EditText
                    android:id="@+id/editKCal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nil"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:text="@string/portion" />

                <EditText
                    android:id="@+id/editPortion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nil"
                    android:inputType="numberDecimal"
                    android:text="100" />

                <TextView
                    android:id="@+id/unitPortion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp" />
            </TableRow>

            <TableRow android:layout_width="match_parent">

                <Button
                    android:id="@+id/bCalculate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:text="@string/calculate" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>